# monitor-system-resources-in-web

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/MetricCollector/: CMakeLists.txt
backend/MetricCollector/include/: CpuUsageCalculator.h  FullSystemSnapshot.h  IProcReader.h  MetricsCollector.h  ProcReader.h  ProcessCollector.h  ProcessInfo.h  SystemMetrics.h
backend/MetricCollector/src/: CpuUsageCalculator.cpp  MetricsCollector.cpp  ProcReader.cpp  ProcessCollector.cpp  main.cpp
backend/MetricConverter/include/: FrontendTableBuilder.h  MetricsConverter.h  MetricsSorter.h
backend/MetricConverter/src/: FrontendTableBuilder.cpp  MetricsConverter.cpp  MetricsSorter.cpp
backend/Server/src/: Server.cpp
frontend/: main.ts  tsconfig.json
frontend/public/: index.html  main.js  main.js.map  style.css
